force-app/main/default/objects/proactiveobjectdelete__c/proactiveobjectdelete__c.object-meta.xml
<CustomObject>
    <description>This object is to track which records from the Proactive Case Custom Object need to be deleted once they have been successfully created into Cases.</description>
    <label>proactiveobjectdelete</label>
    <nameField>
        <label>proactiveobjectdelete Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>proactiveobjectdeletes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>