force-app/main/default/objects/proactiveobjectdelete__c/fields/casecreatedon__c.field-meta.xml
<CustomField>
    <fullName>casecreatedon__c</fullName>
    <label>casecreatedon</label>
    <type>Date</type>
</CustomField>