force-app/main/default/objects/proactiveobjectdelete__c/fields/caseid__c.field-meta.xml
<CustomField>
    <fullName>caseid__c</fullName>
    <label>caseid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>