force-app/main/default/objects/proactiveobjectdelete__c/fields/deletecase__c.field-meta.xml
<CustomField>
    <fullName>deletecase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deletecase</label>
    <type>Checkbox</type>
</CustomField>