force-app/main/default/objects/proactiveobjectdelete__c/fields/proactivecaseid__c.field-meta.xml
<CustomField>
    <fullName>proactivecaseid__c</fullName>
    <label>proactivecaseid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>